# river

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md  cog.toml  docker-compose.yml  river.sln  river.slnx  sonar-project.properties
.claude/commands/: calculate-usage.md  create-feature.md  create-issue.md  dev-plan-impl.md  dev-plan.md  dev-spec.md  feature-plan.md  issue-create.md  plan-dev.md  plan-spec.md  po-spec-writer.md  pr-merge.md  spec-dev.md  spec.md
.claude/skills/flutter/: SKILL.md
.claude/skills/mise-tasks/: SKILL.md
.github/workflows/: ci.yml  pull-request.yml  release.yml  spec-from-issue.yml
.mise/tasks/agent/: sonar-issues  (+8 more)
.river-index/: index.db
.scannerwork/: report-task.txt
docs/: token-optimization.md  token-usage.md  v0.md  v1.1.md  v1.md  week-1.md  week-2.md  week-2026-W19.md  week-2026-W20.md
specs/: HISTORY.md  QUEUE.md  RIVER-2-otel-sidecar-docker-compose-dev-stack.md  RIVER-3-localstack-s3-sidecar-batching.md  SPEC.md  UNRESOLVED.md
specs/drafts/: RIVER-1-ingestion-service.md  RIVER-10-liquibase.md  RIVER-12-grafana.md  RIVER-14-update-sdd.md  RIVER-16-query-api.md  RIVER-19-configuration.md  RIVER-22-error-linking-traces.md  RIVER-25-setup-flutter-mvp-app.md  RIVER-28-api-histogram-facets-extend-logrow.md  RIVER-29-ui-page-layout-time-range-selector-search-bar.md  RIVER-30-ui-facet-panel.md  RIVER-31-ui-log-distribution-histogram.md  RIVER-35-ui-logs-table-with-column-management-and-sort.md  RIVER-37-ui-log-detail-panel.md  RIVER-4-setup-devops.md  RIVER-46-set-up-sonarqube-and-tests-ci-run-for-flutter-code.md  RIVER-49-refactor-ui-layout-move-app-name-to-top-panel-with-datetime-picker.md  RIVER-52-add-logo-and-update-window-title-to-river-dashboard.md  RIVER-55-single-trace-api-endpoint.md  RIVER-56-trace-list-page-flutter.md  RIVER-59-trace-waterfall-detail-panel-flutter.md  RIVER-6-setup-devops-part-2.md  RIVER-61-span-attributes-panel.md  RIVER-67-fix-sonar-duplication-and-trace-page.md  RIVER-70-add-attributes-field-to-span-api-response-and-show-it-in-the-trace-detail-panel.md  RIVER-73-refactor-flutter-widgets-extract-duplicates-split-large-files-fix-async-safety.md  RIVER-76-unify-traces-table-with-logs-table-shared-columns-column-menu-mono-trace-id-start-time-first.md  RIVER-79-fix-rust-code-quality-issues-found-in-analysis.md  RIVER-8-test-ci.md  RIVER-82-fix-code-quality-issues-from-codebase-audit.md  RIVER-85-fix-column-filter-popup-position-in-logs-and-traces-views.md  RIVER-88-implement-metrics-page-with-list-and-graph-sub-tabs.md  RIVER-91-replace-manual-serde-json-value-field-extraction-with-typed-clickhouse-row-structs.md
specs/plans/: logs-ui-full-page.md  trace-explorer.md
src/api/: Cargo.toml  Dockerfile
src/api/src/: clickhouse.rs  config.rs  filter.rs  main.rs  victoriametrics.rs
src/demo-app/: Dockerfile  Program.cs  demo-app.csproj  demo-app.csproj.lscache
src/ingestion/: Cargo.toml  Dockerfile
src/ingestion/src/: clickhouse.rs  config.rs  main.rs  migrations.rs  victoriametrics.rs
src/river-config/: Cargo.toml
src/river-index/: Cargo.toml
src/river-index/src/: db.rs  db_tests.rs  indexer.rs  indexer_tests.rs  main.rs  parser.rs  parser_tests.rs  query.rs  query_tests.rs  walker.rs  walker_tests.rs
src/river-ingestion/: Cargo.toml  Dockerfile
src/river-query-api/: Cargo.toml  Dockerfile
src/river-query-api/src/: clickhouse.rs  config.rs  filter.rs  main.rs  victoriametrics.rs
src/river-sidecar/: Cargo.toml  Dockerfile
src/sidecar/: Cargo.toml  Dockerfile
src/sidecar/src/: batcher.rs  main.rs  metrics_aggregator.rs
src/ui/: analysis_options.yaml  openapi.json  pubspec.yaml
(+134 files in other folders)
