[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
