[package]
name = "ingestion"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
config = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace", "metrics", "logs"] }
prost = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
temp-env = "0.3"
wiremock = "0.6"
