[package]
name = "river-index"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "river-index"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
regex = "1"
ignore = "0.4"
