[package]
name = "river-query-api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
river-config = { path = "../river-config" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
temp-env = "0.3"
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
