[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace", "metrics", "logs"] }
prost = "0.14"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
anyhow = "1"
